fix(antForest): 修复任务列表获取与保存的兼容性问题